--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker image
+- name: Build and Push Docker image
   uses: docker/build-push-action@v5
   with:
     context: .
